// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          connectors.hashicorpVaultDetails
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormVault_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="description-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_vaultUrl"
                  >
                    connectors.hashiCorpVault.vaultUrl
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="https://vaultqa.harness.io"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_basePath"
                  >
                    connectors.hashiCorpVault.baseSecretPath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value="/test"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-2"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_accessType"
                  >
                    authentication
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="accessType"
                        type="radio"
                        value="APP_ROLE"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      App Role
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="accessType"
                        type="radio"
                        value="TOKEN"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Token
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-intent-danger"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      token
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="authToken"
                        href="/account/dummy/resources/connectors"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            createOrSelectSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    validation.authToken
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="engineType-5"
              >
                <label
                  class="bp3-label"
                  for="engineType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_engineType"
                  >
                    Secret Engine
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="engineType"
                        type="radio"
                        value="fetch"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Fetch Engines
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="engineType"
                        type="radio"
                        value="manual"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Manually Configure Engine
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="secretEngineName"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="vaultConfigForm_secretEngineName"
                    >
                      connectors.hashiCorpVault.engineName
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretEngineName"
                        type="text"
                        value="secret"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="secretEngineVersion"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="vaultConfigForm_secretEngineVersion"
                    >
                      connectors.hashiCorpVault.engineVersion
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretEngineVersion"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="renewalIntervalMinutes-7"
              >
                <label
                  class="bp3-label"
                  for="renewalIntervalMinutes"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_renewalIntervalMinutes"
                  >
                    connectors.hashiCorpVault.renewal
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="renewalIntervalMinutes"
                      type="text"
                      value="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_readOnly"
                    >
                      connectors.hashiCorpVault.readOnlyVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-9"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_default"
                    >
                      connectors.hashiCorpVault.defaultVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          connectors.hashicorpVaultDetails
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                sm14
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormVault_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="sm14"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 0px;"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                      </label>
                      <div
                        class="bp3-form-group"
                        data-id="description-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            maxlength="1024"
                            name="description"
                            placeholder="common.descriptionPlaceholder"
                          >
                            asd
                          </textarea>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_vaultUrl"
                  >
                    connectors.hashiCorpVault.vaultUrl
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="https://vaultqa.harness.io"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_basePath"
                  >
                    connectors.hashiCorpVault.baseSecretPath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-2"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_accessType"
                  >
                    authentication
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="accessType"
                        type="radio"
                        value="APP_ROLE"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      App Role
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="accessType"
                        type="radio"
                        value="TOKEN"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Token
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="appRoleId-3"
              >
                <label
                  class="bp3-label"
                  for="appRoleId"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_appRoleId"
                  >
                    connectors.hashiCorpVault.appRoleId
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="appRoleId"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-4"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      connectors.hashiCorpVault.secretId
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="secretId"
                        href="/account/dummy/resources/connectors"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            createOrSelectSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="engineType-5"
              >
                <label
                  class="bp3-label"
                  for="engineType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_engineType"
                  >
                    Secret Engine
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="engineType"
                        type="radio"
                        value="fetch"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Fetch Engines
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="engineType"
                        type="radio"
                        value="manual"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Manually Configure Engine
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="secretEngine-6"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="secretEngine"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Fetch Engines
                  </span>
                </button>
              </div>
              <div
                class="bp3-form-group"
                data-id="renewalIntervalMinutes-7"
              >
                <label
                  class="bp3-label"
                  for="renewalIntervalMinutes"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_renewalIntervalMinutes"
                  >
                    connectors.hashiCorpVault.renewal
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="renewalIntervalMinutes"
                      type="text"
                      value="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_readOnly"
                    >
                      connectors.hashiCorpVault.readOnlyVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-9"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_default"
                    >
                      connectors.hashiCorpVault.defaultVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="hashiCorpVault"
        >
          <svg
            fill="none"
            height="37"
            viewBox="0 0 33 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.711 16.53a.939.939 0 00.933-.934c0-.489-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .489.4.933.933.933zm-2.8-2.578a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.4.934.933.934zm2.8 0a.939.939 0 00.933-.934c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .534.444.934.933.934zm-5.6-2.534a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.533-.4-.933-.933-.933a.939.939 0 00-.933.933c0 .533.444.933.933.933zm-2.8-2.533a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.8 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.444.933.933.933zm-5.6 0a.939.939 0 00.933-.933c0-.534-.4-.934-.933-.934a.939.939 0 00-.933.934c0 .488.4.933.933.933zm2.445 23.289L0 .174h32.711l-16.355 32z"
              fill="#000"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.hashicorpVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--padding-bottom-xlarge"
        >
          connectors.hashiCorpVault.stepTwoName
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_vaultUrl"
                  >
                    connectors.hashiCorpVault.vaultUrl
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="https://vaultqa.harness.io"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_basePath"
                  >
                    connectors.hashiCorpVault.baseSecretPath
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-2"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_accessType"
                  >
                    authentication
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="accessType"
                        type="radio"
                        value="APP_ROLE"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      App Role
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="accessType"
                        type="radio"
                        value="TOKEN"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Token
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-intent-danger"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      token
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="authToken"
                        href="/account/dummy/resources/connectors"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            createOrSelectSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    validation.authToken
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="engineType-5"
              >
                <label
                  class="bp3-label"
                  for="engineType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_engineType"
                  >
                    Secret Engine
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        checked=""
                        name="engineType"
                        type="radio"
                        value="fetch"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Fetch Engines
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio--radio"
                    >
                      <input
                        name="engineType"
                        type="radio"
                        value="manual"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Manually Configure Engine
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="secretEngineName"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="vaultConfigForm_secretEngineName"
                    >
                      connectors.hashiCorpVault.engineName
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretEngineName"
                        type="text"
                        value="secret"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="secretEngineVersion"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="vaultConfigForm_secretEngineVersion"
                    >
                      connectors.hashiCorpVault.engineVersion
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretEngineVersion"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="renewalIntervalMinutes-7"
              >
                <label
                  class="bp3-label"
                  for="renewalIntervalMinutes"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="vaultConfigForm_renewalIntervalMinutes"
                  >
                    connectors.hashiCorpVault.renewal
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="renewalIntervalMinutes"
                      type="text"
                      value="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_readOnly"
                    >
                      connectors.hashiCorpVault.readOnlyVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-9"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="vaultConfigForm_default"
                    >
                      connectors.hashiCorpVault.defaultVault
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
